# mcgen

./: Cargo.toml  DOCS.md  README.md
src/: cli.rs  main.rs  settings.rs
src/adding/: mod.rs
src/config/: create.rs  mod.rs
src/consts/: config.rs  eula.rs  mod.rs  scripts.rs  urls.rs
src/downloading/: bungeecord.rs  mod.rs  paper.rs  plugins.rs
src/fetching/: res.rs
src/sources/: jenkins.rs  mod.rs  registry.rs
src/updating/: mod.rs  versions.rs
src/updating/plugin/: mod.rs
src/updating/server/: mod.rs
