[package]
name = "mcgen"
version = "0.1.8"
edition = "2021"
authors = ["Breadcrumb"]
description = "Generate a Minecraft server in seconds!"
repository = "https://github.com/BreadcrumbIsTaken/mcgen"
homepage = "https://github.com/BreadcrumbIsTaken/mcgen"
license = "MIT"
keywords = ["cli", "server", "mc", "generate", "gen"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
dirs = "4.0.0"
reqwest = { version = "0.11.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
futures-util = "0.3.21"
indicatif = "0.16.2"
edit = "0.1.4"
serde_yaml = "0.8.24"
colored = "2.0.0"
walkdir = "2.3.2"
chrono = "0.4.19"

# Needed for reqwest to work on linux.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = "0.10.40"
